--- a/AddOns/Myslot/CHANGES.txt
+++ b/AddOns/Myslot/CHANGES.txt
@@ -1,16 +1,10 @@
-lightweight tag 9ff893d0287f296eddcf189288b4f0bf8a4f8950 v5.2.8
+lightweight tag 94cca9caa4ffecfa96a95151b6238e4c92b68c47 v5.3.2-classic
 Author:	Boshi Lian <farmer1992@gmail.com>
-Date:	Mon Aug 12 18:24:44 2019 -0700
+Date:	Mon Dec 30 02:03:08 2019 -0800
 
-commit 9ff893d0287f296eddcf189288b4f0bf8a4f8950
+commit 94cca9caa4ffecfa96a95151b6238e4c92b68c47
 Author: Boshi Lian <farmer1992@gmail.com>
-Date:   Mon Aug 12 16:06:13 2019 -0700
+Date:   Tue Aug 27 03:52:51 2019 -0700
 
-    fix locale extrace for multi line
-
-commit 47bc674d83d66ffc817af849251c9c6a172733ca
-Author: Boshi Lian <farmer1992@gmail.com>
-Date:   Mon Aug 12 16:12:59 2019 -0700
-
-    Update README.markdown
+    support classic
 
