--- a/AddOns/Leatrix_Plus/CHANGELOG.txt
+++ b/AddOns/Leatrix_Plus/CHANGELOG.txt
@@ -1,3 +1,12 @@
+3.0.73 - 24th December 2022
+- Added flight times.
+
+3.0.71 - 23rd December 2022
+- Added flight times.  There are now 7393 flight times in Leatrix Plus for Wrath of the Lich King Classic.
+
+3.0.70 - 21st December 2022
+- Added flight times.
+
 3.0.69 - 19th December 2022
 - Added flight times.
 
